--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Ameer Saadat-Yazdi
 email: ameer.saadat99@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A blog to share thoughts, music and projects that I'm working on.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "ameertg.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  ameertg
