--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,12 @@ theme: minima
 plugins:
   - jekyll-feed
 
+header_pages:
+  - thoughts.html
+  - projects.html
+  - music.html
+  - cv.html
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
