--- a/_data/soundcloud.yml
+++ b/_data/soundcloud.yml
@@ -1,7 +1,15 @@
-- title: 'a crack in the moon'
+- title: a crack in the moon
   track: 866839507
   url: https://soundcloud.com/minor6/a-crack-in-the-moon
 
 - title: Gardenlight
   track: 587659638
   url: https://soundcloud.com/minor6/gardenlight
+
+- title: Steelwood
+  track: 417816404
+  url: https://soundcloud.com/minor6/steelwood
+
+- title: Slavic Mountains
+  track: 273311445
+  url: https://soundcloud.com/minor6/slavic-mountains
