--- a/_data/soundcloud.yml
+++ b/_data/soundcloud.yml
@@ -1,3 +1,11 @@
+- title: above water
+  track: 1048823953
+  url: https://soundcloud.com/minor6/above-water
+
+- title: expulsion
+  track: 896966416
+  url: https://soundcloud.com/minor6/expulsion
+  
 - title: a crack in the moon
   track: 866839507
   url: https://soundcloud.com/minor6/a-crack-in-the-moon
