--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,10 @@ github_username:  ameertg
 
 # Build settings
 markdown: kramdown
-theme: minima
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 header_pages:
   - thoughts.html
