--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "ameertg.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  ameertg
+repository: ameertg/ameertg.github.io
+
 
 # Build settings
 markdown: kramdown
