--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ email: ameer.saadat99@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A blog to share thoughts, music and projects that I'm working on.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "ameertg.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ameertg.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  ameertg
 
 
